--- a/front/public/index.html
+++ b/front/public/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, shrink-to-fit=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>front</title>
+    <title>Mariya-rychkova.me</title>
+    <script>
+      window.prismic = {
+        endpoint: 'https://mariya-rychkova-blog.prismic.io/api/v2'
+      };
+    </script>
+    <script src="https://static.cdn.prismic.io/prismic.min.js"></script>
   </head>
   <body>
     <noscript>
